--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -1,10 +1,9 @@
 :root {
-    --backgraund-color: #f7f7f7;
-    --primary-text-color: #FFFFFF;
-    --secondary-text-color: #000000;
-    --footer-text-color: #545454;
-    --modal-text-color: #8C8C8C;
-    --accent-color: #ff6b08;
-    --underline-color: #FF001B;
-    }
-    
+  --background-color: #f7f7f7;
+  --primary-text-color: #ffffff;
+  --secondary-text-color: #000000;
+  --footer-text-color: #545454;
+  --modal-text-color: #8c8c8c;
+  --accent-color: #ff6b08;
+  --underline-color: #ff001b;
+}
