--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,3 +1,6 @@
+@import './base/variables';
+@import './base/utils';
+@import './base/container';
 @import './common';
-@import'./components/home-header';
+@import './components/home-header';
 @import './footer';
