--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,9 +1,16 @@
 <footer class="footer">
-  <div>
+  <div class="container footer_section">
     <p class="footer_text">
-      © 2023 | All Rights Reserved | Developed with
-      <svg lang="en" aria-label="heart" width="14" height="13">
-        <use href="#"></use></svg>
+      &copy; 2023 | All Rights Reserved | Developed with
+      <svg
+        class="footer_icon"
+        lang="en"
+        aria-label="heart"
+        width="14"
+        height="13"
+      >
+        <use href="/src/images/sprite.svg#icon-heart"></use>
+      </svg>
       by <a href="#" class="footer_link">GoIT Students</a>
     </p>
   </div>
