--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,3 +1,7 @@
 @import './common';
 @import'./components/home-header';
 @import './footer';
+
+
+@import'./base/container';
+@import'./base/utils';
