--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -2,12 +2,11 @@
     width: 100%;
     padding-left: 20px;
     padding-right: 20px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: 0 auto;
  }
- @media screen and (min-width: 480px) {
+ @media screen and (min-width: 320px) {
     .container {
-        width: 480px;
+        width: 320px;
         height: 100%;
         
     }
@@ -19,3 +18,9 @@
         padding-right: 32px;
     }
  }
+
+ @media screen and (min-width: 1280px) {
+         .container {
+             width: 1280px;
+         }
+     }
