--- a/src/sass/base/_container.scss
+++ b/src/sass/base/_container.scss
@@ -19,3 +19,9 @@
         padding-right: 32px;
     }
  }
+ @media screen and (min-width: 1280px) {
+     .container {
+         width: 1280px;
+        padding: 0 31px;
+     }
+ }
