--- a/src/partials/api-trending.html
+++ b/src/partials/api-trending.html
@@ -1,5 +1,9 @@
 <div> 
+    <a class='btnToUp' href="#start">
+        <svg class='iconToUp'>
+            <use href="./images/sprite.svg#icon-circle-up"></use>
+        </svg>
+    </a>
     <ul class="js-cards container">
-
     </ul>
 </div>
