--- a/src/partials/home-header.html
+++ b/src/partials/home-header.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header" id="#start">
     <div class="container header__section">
         <nav class="site-nav">
             <a href="./index.html" class="header__logo">
