update btn to up

--- a/src/partials/btnToUp.html
+++ b/src/partials/btnToUp.html
@@ -1,4 +1,4 @@
-<a class='btnToUp' href="#start">
+<a href="./index.html" class='btnToUp'>
     <svg class='iconToUp'>
         <use href="./images/sprite.svg#icon-circle-up"></use>
     </svg>
