--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,8 @@
 <footer class="footer">
   <div class="container footer_section">
-    <p class="footer_text">
-      &copy; 2023 | All Rights Reserved | Developed with
+    <p class="footer_text">&copy; 2023 | All Rights Reserved |</p>
+    <p class="footer_text footer_text-margin">
+      &nbspDeveloped with
       <svg
         class="footer_icon"
         lang="en"
