--- a/src/sass/library.scss
+++ b/src/sass/library.scss
@@ -1,3 +1,5 @@
-@import'./base/container';
-@import'./base/utils';
-@import'./components/library-header';
+@import './base/container';
+@import './base/variables';
+@import './base/utils';
+@import './components/library-header';
+@import './footer';
