--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -12,7 +12,10 @@
       >
         <use href="/src/images/sprite.svg#icon-heart"></use>
       </svg>
-      by <a href="#" class="footer_link">GoIT Students</a>
+      by
+      <a href="#" class="footer_link js-open-modal" data-modal="5"
+        >GoIT Students</a
+      >
     </p>
   </div>
 </footer>
