--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -4,6 +4,8 @@
 @import './common';
 @import './components/home-header';
 @import './footer';
-@import'./base/container';
+@import './base/container';
 @import './spinner.scss';
 @import './components/modal-card';
+@import './components/modal-students';
+// @import './components/modals';
