--- a/src/sass/library.scss
+++ b/src/sass/library.scss
@@ -3,3 +3,5 @@
 @import './base/utils';
 @import './components/library-header';
 @import './footer';
+@import './components/modals';
+@import './components/modal-students';
