--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -7,6 +7,7 @@
 .footer_link {
   color: var(--footer-text-color);
   text-decoration: underline;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer_section {
