--- a/src/partials/modal-students.html
+++ b/src/partials/modal-students.html
@@ -10,7 +10,7 @@
   </button>
 
   <div class="team">
-    <h2 class="team__title">Гладиолус</h2>
+    <h2 class="team__title">Дико ліниві фетчі</h2>
     <ul class="team__list">
       <li class="team__images">
         <picture>
@@ -112,7 +112,11 @@
           <p class="team__position" lang="en">Developer</p>
           <ul class="social-list list">
             <li>
-              <a href="#" class="social-list__link" target="_blank">
+              <a
+                href="https://github.com/IgorButuzov"
+                class="social-list__link"
+                target="_blank"
+              >
                 <svg
                   lang="en"
                   aria-label="github icon"
@@ -125,7 +129,11 @@
               </a>
             </li>
             <li>
-              <a href="#" class="social-list__link" target="_blank">
+              <a
+                href="https://linkedin.com/in/igor-butuzov-7a0305246/"
+                class="social-list__link"
+                target="_blank"
+              >
                 <svg
                   lang="en"
                   aria-label="linkedin icon"
