--- a/src/sass/components/_modal-students.scss
+++ b/src/sass/components/_modal-students.scss
@@ -6,8 +6,8 @@
   width: 280px;
   height: auto;
   background: #fcfcfc;
-  border-radius: 10px;
-  border: 2px solid #f8d24e;
+  border-radius: 40px;
+  border: 2px solid #37f56d;
 
   @media screen and (max-width: 480px) {
     width: 100%;
@@ -24,8 +24,8 @@
     align-items: center;
     position: absolute;
     padding: 0;
-    top: 8px;
-    right: 8px;
+    top: 18px;
+    right: 18px;
     width: 32px;
     height: 32px;
     border-radius: 50px;
@@ -57,8 +57,8 @@
 
 .team {
   // background-color: grey;
-  padding-top: 60px;
-  padding-bottom: 60px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 
   @media screen and (max-width: 767px) {
     &__images:not(:last-child) {
@@ -119,7 +119,7 @@
   &__subtitle {
     padding-top: 30px;
     padding-bottom: 30px;
-    background-color: var(--primary-bgc);
+    background-color: var(--background-color);
     border-radius: 0px 0px 4px 4px;
   }
 
@@ -153,14 +153,14 @@
     height: 44px;
     border-radius: 50%;
     color: #afb1b8;
-    background-color: var(--primary-bgc);
-    transition: background-color var(--transition-duration-and-timing-function),
-      color var(--transition-duration-and-timing-function);
+    background-color: var(--background-color);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
     &:focus {
-      color: var(--primary-bgc);
-      background-color: var(--accent-color);
+      color: var(--background-color);
+      background-color: rgb(46, 175, 245);
     }
   }
 }
