--- a/src/sass/components/_library-header.scss
+++ b/src/sass/components/_library-header.scss
@@ -125,6 +125,8 @@ screen and (min-resolution: 3dppx) {
 
     .header__logo-text {
         display: inline-block;
+        font-family: 'Roboto', sans-serif;
+        font-style: normal;
         font-weight: 500;
         font-size: 30px;
         line-height: 1.17;
