--- a/src/partials/modal-students.html
+++ b/src/partials/modal-students.html
@@ -13,12 +13,11 @@
     <h2 class="team__title">Дико ліниві фетчі</h2>
     <ul class="team__list">
       <li class="team__images">
-        <picture>
-          <source srcset="#" media="(min-width: 1200px)" />
-          <source srcset="#" media="(min-width: 768px)" />
-          <source srcset="#" media="(max-width: 767px)" />
-          <img src="#" alt="Фото Serhii Shturma"
-        /></picture>
+        <img
+          class="team__image"
+          src="/src/images/Serhii Shturma.jpeg"
+          alt="Фото Serhii Shturma"
+        />
         <div class="team__subtitle">
           <h3 class="team__name">Serhii Shturma</h3>
           <p class="team__position" lang="en">Team Lead</p>
@@ -61,12 +60,11 @@
         </div>
       </li>
       <li class="team__images">
-        <picture>
-          <source srcset="#" media="(min-width: 1200px)" />
-          <source srcset="#" media="(min-width: 768px)" />
-          <source srcset="#" media="(max-width: 767px)" />
-          <img src="#" alt="Фото Elena Mulyarchuk"
-        /></picture>
+        <img
+          class="team__image"
+          src="/src/images/Elena Mulyarchuk.jpg"
+          alt="Фото Elena Mulyarchuk"
+        />
         <div class="team__subtitle">
           <h3 class="team__name">Elena Mulyarchuk</h3>
           <p class="team__position" lang="en">Scrum Master</p>
@@ -101,12 +99,11 @@
         </div>
       </li>
       <li class="team__images">
-        <picture>
-          <source srcset="#" media="(min-width: 1200px)" />
-          <source srcset="#" media="(min-width: 768px)" />
-          <source srcset="#" media="(max-width: 767px)" />
-          <img src="#" alt="Фото Igor Butuzov"
-        /></picture>
+        <img
+          class="team__image"
+          src="/src/images/Igor Butuzov.jpeg"
+          alt="Фото Igor Butuzov"
+        />
         <div class="team__subtitle">
           <h3 class="team__name">Igor Butuzov</h3>
           <p class="team__position" lang="en">Developer</p>
@@ -149,18 +146,21 @@
         </div>
       </li>
       <li class="team__images">
-        <picture>
-          <source srcset="#" media="(min-width: 1200px)" />
-          <source srcset="#" media="(min-width: 768px)" />
-          <source srcset="#" media="(max-width: 767px)" />
-          <img src="#" alt="Фото Oksana Turkevich"
-        /></picture>
+        <img
+          class="team__image"
+          src="/src/images/Oksana Turkevich.jpg"
+          alt="Фото Oksana Turkevich"
+        />
         <div class="team__subtitle">
           <h3 class="team__name">Oksana Turkevich</h3>
           <p class="team__position" lang="en">Developer</p>
           <ul class="social-list list">
             <li>
-              <a href="#" class="social-list__link" target="_blank">
+              <a
+                href="https://github.com/OksanaTur"
+                class="social-list__link"
+                target="_blank"
+              >
                 <svg
                   lang="en"
                   aria-label="github icon"
@@ -189,12 +189,11 @@
         </div>
       </li>
       <li class="team__images">
-        <picture>
-          <source srcset="#" media="(min-width: 1200px)" />
-          <source srcset="#" media="(min-width: 768px)" />
-          <source srcset="#" media="(max-width: 767px)" />
-          <img src="#" alt="Фото Bohdan Kherson"
-        /></picture>
+        <img
+          class="team__image"
+          src="/src/images/Bohdan Kherson.jpg"
+          alt="Фото Bohdan Kherson"
+        />
         <div class="team__subtitle">
           <h3 class="team__name">Bohdan Kherson</h3>
           <p class="team__position" lang="en">Developer</p>
@@ -229,12 +228,11 @@
         </div>
       </li>
       <li class="team__images">
-        <picture>
-          <source srcset="#" media="(min-width: 1200px)" />
-          <source srcset="#" media="(min-width: 768px)" />
-          <source srcset="#" media="(max-width: 767px)" />
-          <img src="#" alt="Фото Lera Voloshina"
-        /></picture>
+        <img
+          class="team__image"
+          src="/src/images/Lera Voloshina.jpg"
+          alt="Фото Lera Voloshina"
+        />
         <div class="team__subtitle">
           <h3 class="team__name">Lera Voloshina</h3>
           <p class="team__position" lang="en">Developer</p>
@@ -269,12 +267,11 @@
         </div>
       </li>
       <li class="team__images">
-        <picture>
-          <source srcset="#" media="(min-width: 1200px)" />
-          <source srcset="#" media="(min-width: 768px)" />
-          <source srcset="#" media="(max-width: 767px)" />
-          <img src="#" alt="Фото Mykola Ischuk"
-        /></picture>
+        <img
+          class="team__image"
+          src="/src/images/Mykola Ischuk.jpg"
+          alt="Фото Mykola Ischuk"
+        />
         <div class="team__subtitle">
           <h3 class="team__name">Mykola Ischuk</h3>
           <p class="team__position" lang="en">Developer</p>
@@ -309,14 +306,52 @@
         </div>
       </li>
       <li class="team__images">
-        <picture>
-          <source srcset="#" media="(min-width: 1200px)" />
-          <source srcset="#" media="(min-width: 768px)" />
-          <source srcset="#" media="(max-width: 767px)" />
-          <img src="#" alt="Фото Marina Zakvatska"
-        /></picture>
+        <img
+          class="team__image"
+          src="/src/images/Marina Zakvatska.jpg"
+          alt="Фото Marina Zakvatska"
+        />
         <div class="team__subtitle">
           <h3 class="team__name">Marina Zakvatska</h3>
+          <p class="team__position" lang="en">Developer</p>
+          <ul class="social-list list">
+            <li>
+              <a href="#" class="social-list__link" target="_blank">
+                <svg
+                  lang="en"
+                  aria-label="github icon"
+                  class="social-list-icon"
+                  width="20"
+                  height="20"
+                >
+                  <use href="./images/sprite.svg#icon-github"></use>
+                </svg>
+              </a>
+            </li>
+            <li>
+              <a href="#" class="social-list__link" target="_blank">
+                <svg
+                  lang="en"
+                  aria-label="linkedin icon"
+                  class="social-list-icon"
+                  width="20"
+                  height="20"
+                >
+                  <use href="./images/sprite.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </li>
+      <li class="team__images">
+        <img
+          class="team__image"
+          src="/src/images/Yevgen Feschenko.jpg"
+          alt="Фото Yevgen Feschenko"
+        />
+        <div class="team__subtitle">
+          <h3 class="team__name">Yevgen Feschenko</h3>
           <p class="team__position" lang="en">Developer</p>
           <ul class="social-list list">
             <li>
