--- a/src/partials/modal-students.html
+++ b/src/partials/modal-students.html
@@ -149,10 +149,10 @@
         <img
           class="team__image"
           src="/src/images/Oksana Turkevich.jpg"
-          alt="Фото Oksana Turkevich"
+          alt="Фото Oksana Turkevych"
         />
         <div class="team__subtitle">
-          <h3 class="team__name">Oksana Turkevich</h3>
+          <h3 class="team__name">Oksana Turkevych</h3>
           <p class="team__position" lang="en">Developer</p>
           <ul class="social-list list">
             <li>
