--- a/src/sass/components/_modal-students.scss
+++ b/src/sass/components/_modal-students.scss
@@ -102,6 +102,14 @@
   }
 
   &__image {
+    @media screen and (max-width: 767px) {
+      width: 450px;
+    }
+
+    @media screen and (max-width: 1199px) {
+      height: 300px;
+    }
+
     @media screen and (min-width: 1200px) {
       height: 215;
       // width: ;
@@ -201,4 +209,23 @@
 
 .social-list-icon {
   fill: currentColor;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  overflow-y: scroll;
+  background: rgba(0, 0, 0, 0.2);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.backdrop.is-hidden {
+  visibility: hidden;
+  opacity: 0;
+  pointer-events: none;
 }
