--- a/src/partials/modalCard.html
+++ b/src/partials/modalCard.html
@@ -14,7 +14,7 @@
     <div class="modal_txt"></div>
     <div class="button-list-card">
       <button class="button_card_add watched-btn"></button>
-      <button class="button_card_add quequeBtn">ADD TO QUEQUE</button>
+      <button class="button_card_add quequeBtn">ADD TO QUEUE</button>
     </div>
   </div>
 </div>
