--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -6,4 +6,6 @@
   --modal-text-color: #8c8c8c;
   --accent-color: #ff6b08;
   --underline-color: #ff001b;
+  --dark-bgc: #333333;
+  --light-bgc: #ffffff;
 }
