--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -9,3 +9,4 @@
 // @import './components/modal-students';
 @import './_pagination';
 // @import './components/modals';
+@import './components/theme';
