--- a/src/partials/btnToUp.html
+++ b/src/partials/btnToUp.html
@@ -1,5 +1,10 @@
-<a href="./index.html" class='btnToUp'>
-    <svg class='iconToUp'>
-        <use href="./images/sprite.svg#icon-circle-up"></use>
-    </svg>
-</a>
+<!-- <a href="./index.html" class="btnToUp">
+  <svg class="iconToUp">
+    <use href="./images/sprite.svg#icon-circle-up"></use>
+  </svg>
+</a> -->
+<button type="button" class="btnToUp">
+  <svg class="iconToUp">
+    <use href="./images/sprite.svg#icon-circle-up"></use>
+  </svg>
+</button>
