--- a/src/sass/components/_theme.scss
+++ b/src/sass/components/_theme.scss
@@ -110,6 +110,7 @@ body.dark-theme {
 
 .theme-switch__toggle:checked ~ .theme-switch__marker {
   transform: translateX(22px);
+  background-color: darkred;
 }
 
 // .theme-switch__toggle:focus + .theme-switch__track,
