--- a/src/partials/api-trending.html
+++ b/src/partials/api-trending.html
@@ -1,5 +1,5 @@
-<div> 
-    <ul class="js-cards container">
-    </ul>
+<div>
+  <ul class="js-cards container"></ul>
+  <div class="js-spinner visually-hidden"></div>
 </div>
 <button type="button" class="load-more-btn">Load more</button>
