--- a/src/sass/components/_modal-card.scss
+++ b/src/sass/components/_modal-card.scss
@@ -28,7 +28,8 @@
     padding: 48px 20px;
     width: 100%;
     z-index: 200;
-    
+    overflow-y: auto;
+    overflow-x: hidden;
     background-color: #fff;
     box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
       0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
