--- a/src/partials/api-trending.html
+++ b/src/partials/api-trending.html
@@ -1,5 +1,6 @@
-<div> 
-    <ul class="js-cards container">
-    </ul>
+<div>
+  <div class="js-spinner is-hidden"></div>
+  <ul class="js-cards container"></ul>
+
+  <button type="button" class="load-more-btn">Load more</button>
 </div>
-<button type="button" class="load-more-btn">Load more</button>
