--- a/src/sass/base/_utils.scss
+++ b/src/sass/base/_utils.scss
@@ -1,9 +1,9 @@
-*,
-*::before,
-*::after {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
+// *,
+// *::before,
+// *::after {
+//   -webkit-box-sizing: border-box;
+//   box-sizing: border-box;
+// }
 
 body {
   min-height: 100vh;
