--- a/src/sass/components/_library-header.scss
+++ b/src/sass/components/_library-header.scss
@@ -1,5 +1,5 @@
 .lib-header {
-    min-height: 230px;
+    // min-height: 230px;
     background-repeat: no-repeat;
     background-position: center;
     background-color: rgba(0, 0, 0, 0.56);
@@ -34,15 +34,15 @@ screen and (min-resolution: 3dppx) {
     padding-bottom: 44px;
 }
 
-@media screen and (min-width: 768px) {
-    .header {
-        min-height: auto;
-    }
+// @media screen and (min-width: 768px) {
+//     .header {
+//         min-height: auto;
+//     }
 
-    .header__section {
-        padding-bottom: 60px;
-    }
-}
+//     .header__section {
+//         padding-bottom: 60px;
+//     }
+// }
 
 /*Tablet*/
 @media screen and (min-width: 768px) {
