--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -8,5 +8,5 @@
 @import './components/modal-card';
 @import './components/modal-students';
 @import './_pagination';
-@import './components/modals';
+// @import './components/modals';
 @import './components/theme';
