--- a/src/sass/library.scss
+++ b/src/sass/library.scss
@@ -1,6 +1,7 @@
 @import './base/container';
 @import './base/variables';
 @import './base/utils';
+@import './common';
 @import './components/library-header';
 @import './footer';
 @import './components/modals';
