temporary funny pic

--- a/src/sass/library.scss
+++ b/src/sass/library.scss
@@ -7,3 +7,4 @@
 @import './components/modals';
 @import './components/modal-students';
 @import './components/theme';
+@import './components/funny-pic';
