--- a/src/partials/modalCard.html
+++ b/src/partials/modalCard.html
@@ -1,20 +1,2 @@
-<div class="backdrop js-backdrop">
-  <div class="modal">
-    <div class="close_modal_movie_card" data-modal-close>
-      <svg
-        class="modal__cross"
-        xmlns="http://www.w3.org/2000/svg"
-        viewBox="0 0 24 24"
-      >
-        <path
-          d="M23.954 21.03l-9.184-9.095 9.092-9.174-2.832-2.807-9.09 9.179-9.176-9.088-2.81 2.81 9.186 9.105-9.095 9.184 2.81 2.81 9.112-9.192 9.18 9.1z"
-        />
-      </svg>
-    </div>
-    <div class="modal_txt"></div>
-    <div class="button-list-card">
-      <button class="button_card_add watched-btn"></button>
-      <button class="button_card_add quequeBtn">ADD TO QUEUE</button>
-    </div>
-  </div>
-</div>
+<div class="js-movie-modal-backdrop is-hidden"></div>
+<div class="js-movie-modal is-hidden"></div>
