--- a/src/sass/components/_modal-card.scss
+++ b/src/sass/components/_modal-card.scss
@@ -1,341 +1,284 @@
-.backdrop {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+@mixin mobile {
+  @media screen and (min-width: 480px) {
+    @content;
+  }
+}
 
-  position: fixed;
-  top: 0;
-  left: 0;
+@mixin tablet {
+  @media screen and (min-width: 768px) {
+    @content;
+  }
+}
 
-  width: 100%;
-  height: 100%;
+@mixin desktop {
+  @media screen and (min-width: 1280px) {
+    @content;
+  }
+}
 
-  background-color: rgba(0, 0, 0, 0.3);
-
-  z-index: 999;
-
-  pointer-events: none;
+.js-movie-modal-backdrop.is-hidden,
+.js-movie-modal.is-hidden {
   opacity: 0;
   visibility: hidden;
-  transition: opacity 200ms ease-in-out, visibility 200ms ease-in-out;
+  pointer-events: none;
+  transform: translate(-50%, -50%) scale(1.1);
 }
 
-@media screen and (min-width: 320px) {
-  .modal {
-    position: fixed;
-
-    transform: translate(-50%, -50%);
-    padding: 48px 20px;
-    width: 100%;
-    z-index: 200;
-    overflow-y: auto;
-    overflow-x: hidden;
-    background-color: #fff;
-    box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
-      0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
-    transform: scale(1.1);
-    transition: transform 200ms ease-in-out;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .modal {
-    padding: 40px 72px 40px 36px;
-    max-width: 704px;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  .modal {
-    padding: 40px 12px;
-    max-width: 806px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .modal_txt {
-    display: flex;
-    flex-direction: row;
-  }
-}
-
-@media screen and (min-width: 320px) {
-  .image_movie_card {
-    display: block;
-    width: 100%;
-    margin: auto;
-    border-radius: 5px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .image_movie_card {
-    margin-left: 0;
-    margin-right: 68px;
-    width: 264px;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  .image_movie_card {
-    margin-right: 16px;
-    width: 375px;
-  }
-}
-
-.close_modal_movie_card {
-  position: absolute;
-  top: 16px;
-  right: 16px;
-  width: 14px;
-  height: 14px;
-  cursor: pointer;
-}
-
-@media screen and (min-width: 320px) {
-  .button_card_add,
-  .button_card_queue {
-    display: block;
-    width: 110px;
-    height: 44px;
-    border: 1px solid black;
-    /*  padding: 6px; */
-    border-radius: 5px;
-    text-decoration: none;
-    margin-top: 20px;
-    text-align: center;
-
-    font-size: 16px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .button_card_add,
-  .button_card_queue {
-    width: 125px;
-    height: 44px;
-    margin-top: 40px;
-    font-size: 14px;
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  .button_card_add,
-  .button_card_queue {
-    width: 136px;
-    height: 44px;
-    margin-top: 20px;
-    font-size: 16px;
-  }
-}
-
-@media screen and (min-width: 320px) {
-  .button-list-card {
-    display: flex;
-    gap: 20px;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .button-list-card {
-    display: flex;
-    gap: 15px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  .button-list-card {
-    display: flex;
-    gap: 15px;
-  }
-}
-
-.button_card_add:hover,
-.button_card_queue:hover,
-.button_card_add:focus,
-.button_card_queue:focus {
-  background-color: #ff6b01;
-  color: #fff;
-  border: none;
-}
-
-.phonesize_image_movie {
-  display: block;
-}
-
-body.show-modal .backdrop {
+.js-movie-modal-backdrop {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 50%;
+  left: 50%;
+  background-color: rgba($color: #000000, $alpha: 0.8);
+  transform: translate(-50%, -50%) scale(1);
   opacity: 1;
-  visibility: visible;
-  pointer-events: initial;
+  transition: all 0.5s ease 0s;
 }
 
-body.show-modal .modal {
-  transform: scale(1);
+
+.js-movie-modal {
+  z-index: 150;
+  overflow-y: scroll;
+  max-height: 100%;
+  width: 280px;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  background-color: #ffffff;
+  color: #000;
+  font-weight: 500;
+  margin-top: 20px;
+  margin-bottom: 38px;
+  transform: translate(-50%, -50%) scale(1);
+  opacity: 1;
+  transition: all 0.5s ease 0s;
+
+  @include tablet {
+    width: 704px;
+    height: 552px;
+    // overflow-y: hidden;
+  }
+
+  @include desktop {
+    width: 806px;
+    height: 558px;
+    overflow: hidden;
+  }
 }
 
-.rates_info_card_movie {
+.js-movie-modal__content {
+  padding: 48px 20px 40px 20px;
+
+  @include mobile {
+    display: flex;
+    flex-direction: column;
+  }
+
+  @include tablet {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 40px 72px 40px 36px;
+    width: 704px;
+    height: 552px;
+  }
+
+  @include desktop {
+    display: flex;
+    padding: 40px 12px;
+    width: 806px;
+    height: 558px;
+  }
+}
+
+.js-movie-modal__img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  border-radius: 5px;
+}
+
+.movie-modal__info-about {
+  max-width: 391px;
+}
+
+.js-movie-modal__close-btn {
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  padding: 0px;
   display: flex;
-  gap: 85px;
-}
+  align-items: center;
+  justify-content: center;
+  top: 8px;
+  right: 8px;
+  border: none;
+  background: #ffffff;
+  color: #000000;
 
-@media screen and (min-width: 320x) {
-  .rates_info_card_movie_titles {
-    margin: 50px;
+  transition: 0.25s cubic-bezier(0.4, 0, 0.2, 1),
+  background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    background-color: #ff6b08;
   }
 }
 
-/* @media screen and (min-width: 768x) {
-    .rates_info_card_movie_titles {
-        display: block;
-        color: #8C8C8C;
-        margin-right: 40px;
-    }
-}
-@media screen and (min-width: 1024x) {
-    .rates_info_card_movie_titles {
-        display: block;
-        color: #8C8C8C;
-        margin-right: 40px;
-    }
-} */
+.js-movie-modal__poster {
+  width: 240px;
+  height: 357px;
+  margin-bottom: 20px;
+  border-radius: 5px;
 
-@media screen and (min-width: 320px) {
-  .movie_title_card_modal {
-    font-family: Roboto, sans-serif;
-    font-weight: 500;
-    font-size: 20pt;
-    margin: 20px 0px;
+
+  @include tablet {
+    width: 264px;
+    height: 374px;
+    margin-right: 68px;
+
+  }
+
+  @include desktop {
+    height: 478px;
+    width: 375px;
+    margin-right: 16px;
+  }
+
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.js-movie-modal__title {
+  color: #000000;
+  font-size: 20px;
+  line-height: 23px;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+
+  @include tablet {
+    max-width: 264px;
+    margin-bottom: 20px;
+  }
+
+  @include desktop {
+    font-size: 30px;
+    line-height: 35px;
   }
 }
 
-@media screen and (min-width: 768px) {
-  .movie_title_card_modal {
-    margin-top: 0;
+.movie-modal__info {
+  display: flex;
+  margin-bottom: 20px;
+}
+
+.movie-modal__info-name {
+  font-size: 12px;
+  line-height: 16px;
+  display: flex;
+  flex-direction: column;
+}
+
+.info-name {
+  font-size: 12px;
+  line-height: 16px;
+  flex-direction: column;
+  color: #8c8c8c;
+  margin-bottom: 8px;
+
+  &:last-child {
+    margin-bottom: 0px;
   }
 }
 
-/* @media screen and (min-width: 1024px) {
-      .movie_title_card_modal {
-          font-family: Roboto, sans-serif;
-          font-weight: 500;
-          font-size: 20pt;
-          margin: 20px 0px;
+.js-info-value {
+  color: #000000;
+  font-size: 12px;
+  line-height: 1.4;
+  margin-bottom: 8px;
+  margin-left: 39px;
+  display: flex;
 
-      }
-  } */
-@media screen and (min-width: 320px) {
-  .rates_info_card_movie_titles_name {
-    font-size: 16px;
-    color: #8c8c8c;
-    margin-bottom: 8px;
+  &:last-child {
+    margin-bottom: 0px;
   }
 }
 
-/*  @media screen and (min-width: 768px) {
-     .rates_info_card_movie_titles_name {
-         font-size: 16px;
-         color: #8C8C8C;
-         margin-bottom: 8px;
-
-     }
- }
-
-  @media screen and (min-width: 1020px) {
-      .rates_info_card_movie_titles_name {
-          font-size: 16px;
-          color: #8C8C8C;
-          margin-bottom: 8px;
-
-      }
-  } */
-
-@media screen and (min-width: 320px) {
-  .votes_number_card {
-    font-size: 16px;
-    margin-bottom: 8px;
-  }
+.js-info-value__vote {
+  color: #fff;
+  background-color: #ff6b01;
+  border-radius: 5px;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
-/* @media screen and (min-width: 768px) {
-    .votes_number_card {
-        font-size: 16px;
-        margin-bottom: 8px;
-    }
-}
-
-@media screen and (min-width: 1024px) {
-    .votes_number_card {
-        font-size: 16px;
-        margin-bottom: 8px;
-    }
-} */
-
-@media screen and (min-width: 320px) {
-  .span_votes_number_card {
-    font-size: 16px;
-    margin-bottom: 8px;
-    background-color: #ff6b01;
-    border-radius: 5px;
-    padding: 3px;
-  }
-}
-
-/*   @media screen and (min-width: 768px) {
-      .span_votes_number_card {
-          font-size: 16px;
-          margin-bottom: 8px;
-          background-color: #FF6B01;
-          border-radius: 5px;
-          padding: 3px;
-      }
-  }
-
-   @media screen and (min-width: 1024px) {
-       .span_votes_number_card {
-           font-size: 16px;
-           margin-bottom: 8px;
-           background-color: #FF6B01;
-           border-radius: 5px;
-           padding: 3px;
-       }
-   } */
-
-@media screen and (min-width: 320px) {
-  .about-film-card-info {
-    margin-top: 12px;
-  }
-}
-
-/*    @media screen and (min-width: 768px) {
-             .about-film-card-info {
-                 margin-top: 12px;
-    
-             }
-         }
-
-                   @media screen and (min-width: 1024px) {
-                       .about-film-card-info {
-                           margin-top: 12px;
-        
-                       }
-                   } */
-
-.movie_card_info {
-  margin-top: 12px;
+.movie-modal__about {
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+  text-transform: uppercase;
   margin-bottom: 8px;
 }
 
-@media screen and (min-width: 320px) {
-  .description-movie-card {
-    display: block;
+.js-movie-modal__about-text {
+  max-height: 210px;
+  width: 240px;
+  overflow: auto;
+  font-size: 12px;
+  line-height: 20px;
+  color: #000000;
+  margin-bottom: 20px;
+
+  @include tablet {
     width: 264px;
-    margin-top: 8px;
-    font-size: 16px;
+  }
+
+  @include desktop {
+    padding-right: 12px;
+    width: 391px;
   }
 }
 
-@media screen and (min-width: 1024px) {
-  .description-movie-card {
-    width: 391px;
+.movie-modal__btn-list {
+  display: flex;
+  flex-wrap: nowrap;
+}
+
+.js-movie-modal__btn {
+  text-align: center;
+  width: 110px;
+  height: 44px;
+  margin-right: 20px;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 16px;
+  text-transform: uppercase;
+  cursor: pointer;
+  background-color: #ffffff;
+  border: 1px solid #000000;
+  border-radius: 5px;
+  transition: color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+
+  @include tablet {
+    width: 125px;
   }
+
+  @include desktop {
+    width: 136px;
+  }
+
+  &:hover {
+    color: #fff;
+    box-shadow: none;
+    background-color: #ff6b08;
+    border: 1px solid #ff6b08;
+  }
+}
+
+.js-remove-from {
+  color: #ffffff;
+  background-color: #ff6b08;
+  border: 1px solid #ff6b08;
 }
