--- a/src/sass/components/_modal-card.scss
+++ b/src/sass/components/_modal-card.scss
@@ -54,10 +54,14 @@
   opacity: 1;
   transition: all 0.5s ease 0s;
 
+  &::-webkit-scrollbar {
+      width: 0;
+    }
+
   @include tablet {
     width: 704px;
     height: 552px;
-    // overflow-y: hidden;
+    overflow-y: hidden;
   }
 
   @include desktop {
