--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -7,6 +7,6 @@
 @import './spinner.scss';
 @import './components/modal-students';
 @import './_pagination';
-// @import './components/modals';
+@import './components/modals';
 @import './components/theme';
 @import './components/modal-card';
