--- a/src/partials/library-header.html
+++ b/src/partials/library-header.html
@@ -1,5 +1,6 @@
 <header class="lib-header">
     <div class="container header__section">
+        <div class="banner">#StandWithUKRAINE</div>
         <nav class="site-nav">
             <a href="./index.html" class="header__logo">
                 <svg class="header__icon" width="24" height="24">
