--- a/src/sass/components/_library-header.scss
+++ b/src/sass/components/_library-header.scss
@@ -268,3 +268,17 @@ screen and (min-resolution: 3dppx) {
     background-color: #FF6B01;
     border-color: #FF6B01;
 }
+
+.banner {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 20px;
+    font-size: 11px;
+    font-weight: 700;
+    text-align: center;
+    color: white;
+    background-image: linear-gradient(to bottom, blue 50%, yellow 50%);
+    opacity: 1;
+}
