--- a/src/partials/modal-students.html
+++ b/src/partials/modal-students.html
@@ -316,7 +316,11 @@
           <p class="team__position" lang="en">Developer</p>
           <ul class="social-list list">
             <li>
-              <a href="#" class="social-list__link" target="_blank">
+              <a
+                href="https://github.com/marynazakvatska"
+                class="social-list__link"
+                target="_blank"
+              >
                 <svg
                   lang="en"
                   aria-label="github icon"
@@ -329,7 +333,11 @@
               </a>
             </li>
             <li>
-              <a href="#" class="social-list__link" target="_blank">
+              <a
+                href="https://www.linkedin.com/in/maryna-zakvatska-9b80871a6/"
+                class="social-list__link"
+                target="_blank"
+              >
                 <svg
                   lang="en"
                   aria-label="linkedin icon"
