--- a/src/sass/library.scss
+++ b/src/sass/library.scss
@@ -8,3 +8,4 @@
 @import './components/modal-students';
 @import './components/theme';
 @import './components/funny-pic';
+@import './components/modal-card';
