--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -2,35 +2,35 @@
   width: 100%;
   text-align: center;
   background-color: var(--background-color);
-}
 
-.footer_link {
-  color: var(--footer-text-color);
-  text-decoration: underline;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.footer_section {
-  padding-top: 30px;
-  padding-bottom: 28px;
-
-  @media screen and (min-width: 768px) {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  &_link {
+    color: var(--footer-text-color);
+    text-decoration: underline;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
-}
 
-.footer_text {
-  line-height: 1.17;
-  color: var(--footer-text-color);
-}
+  &_section {
+    padding-top: 30px;
+    padding-bottom: 28px;
 
-.footer_icon {
-  animation: beat 0.7s ease infinite alternate;
-  fill: #ff6b08;
-  margin-left: 3px;
-  margin-right: 4px;
+    @media screen and (min-width: 768px) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+  }
+
+  &_text {
+    line-height: 1.17;
+    color: var(--footer-text-color);
+  }
+
+  &_icon {
+    animation: beat 0.7s ease infinite alternate;
+    fill: #ff6b08;
+    margin-left: 3px;
+    margin-right: 4px;
+  }
 }
 
 @keyframes beat {
