--- a/src/sass/components/_home-header.scss
+++ b/src/sass/components/_home-header.scss
@@ -1,302 +1,305 @@
 .header {
-    background-repeat: no-repeat;
-    background-position: center;
-    background-color: rgba(0, 0, 0, 0.56);
-    background-image: url(/src/images/mobile/main-background-mobile.png);
-    background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: rgba(0, 0, 0, 0.56);
+  background-image: url(/src/images/mobile/main-background-mobile.png);
+  background-size: cover;
 }
 
 @media (min-device-pixel-ratio: 2),
-(-webkit-min-device-pixel-ratio: 2),
-(min-resolution: 192dpi),
-(min-resolution: 2dppx) {
-    .header {
-        background-image: url(/src/images/mobile/main-background-mobile@2x.png);
-    }
+  (-webkit-min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
+  .header {
+    background-image: url(/src/images/mobile/main-background-mobile@2x.png);
+  }
 }
 
 @media screen and (min-device-pixel-ratio: 3),
-screen and (min-resolution: 288dpi),
-screen and (min-resolution: 3dppx) {
-    .header {
-        background-image: url(/src/images/mobile/main-background-mobile@3x.png);
-    }
+  screen and (min-resolution: 288dpi),
+  screen and (min-resolution: 3dppx) {
+  .header {
+    background-image: url(/src/images/mobile/main-background-mobile@3x.png);
+  }
 }
 
 /*Tablet*/
 @media screen and (min-width: 768px) {
-    .header {
-        min-height: 216px;
-        background-image: url(/src/images/tablet/main-background-tablet.png);
-    }
+  .header {
+    min-height: 216px;
+    background-image: url(/src/images/tablet/main-background-tablet.png);
+  }
 
-    @media (min-device-pixel-ratio: 2),
+  @media (min-device-pixel-ratio: 2),
     (-webkit-min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
-        .header {
-            background-image: url(/src/images/tablet/main-background-tablet@2x.png);
-        }
+    .header {
+      background-image: url(/src/images/tablet/main-background-tablet@2x.png);
     }
+  }
 
-    @media screen and (min-device-pixel-ratio: 3),
+  @media screen and (min-device-pixel-ratio: 3),
     screen and (min-resolution: 288dpi),
     screen and (min-resolution: 3dppx) {
-        .header {
-            background-image: url(/src/images/tablet/main-background-tablet@3x.png);
-        }
+    .header {
+      background-image: url(/src/images/tablet/main-background-tablet@3x.png);
     }
+  }
 }
 
 /*Desctop фон*/
 @media screen and (min-width: 1280px) {
-    .header {
-        background-image: url(/src/images/desktop/main-background-desktop.png);
-    }
+  .header {
+    background-image: url(/src/images/desktop/main-background-desktop.png);
+  }
 
-    @media (min-device-pixel-ratio: 2),
+  @media (min-device-pixel-ratio: 2),
     (-webkit-min-device-pixel-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx) {
-        .header {
-            background-image: url(/src/images/desktop/main-background-desktop@2x.png);
-        }
+    .header {
+      background-image: url(/src/images/desktop/main-background-desktop@2x.png);
     }
+  }
 
-    @media screen and (min-device-pixel-ratio: 3),
+  @media screen and (min-device-pixel-ratio: 3),
     screen and (min-resolution: 288dpi),
     screen and (min-resolution: 3dppx) {
-        .header {
-            background-image: url(/src/images/desktop/main-background-desktop@3x.png);
-        }
+    .header {
+      background-image: url(/src/images/desktop/main-background-desktop@3x.png);
     }
+  }
 }
 
 .header__section {
-    padding-top: 40px;
-    padding-bottom: 44px;
+  padding-top: 40px;
+  padding-bottom: 44px;
 }
 
 .header__logo {
-    transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: stroke 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header__icon {
-    stroke: #FFFFFF;
-    fill: none;
-    display: block;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  stroke: #ffffff;
+  fill: none;
+  display: block;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .site-nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .header__list {
-    display: flex;
-    align-items: center;
-    font-style: 500;
-    font-size: 12px;
-    line-height: 1;
+  display: flex;
+  align-items: center;
+  font-style: 500;
+  font-size: 12px;
+  line-height: 1;
 }
 
 .header__list {
-    color: #FFFFFF;
+  color: #ffffff;
 }
 
 .header__list-item {
-    position: relative;
-    margin-right: 40px;
+  position: relative;
+  margin-right: 40px;
+  transition: 1s;
+  &:hover,
+  &:focus {
+    transform: scale(1.3);
+  }
 }
 
 .header__list-item:last-child {
-    margin-right: 0px;
+  margin-right: 0px;
 }
 
 .header__list-link {
-    color: #FFFFFF;
-    font-size: 12px;
-    font-weight: 500;
-    line-height: 1.17;
-    padding-top: 2px;
-    padding-bottom: 2px;
+  color: #ffffff;
+  font-size: 12px;
+  font-weight: 500;
+  line-height: 1.17;
+  padding-top: 2px;
+  padding-bottom: 2px;
 
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .header__form {
-    margin-top: 54px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  margin-top: 54px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .header__form-search {
-    position: relative;
-    width: 280px;
+  position: relative;
+  width: 280px;
 }
 
 .header__form-input {
-    font-size: 14px;
-    max-width: 280px;
-    width: 100%;
-    height: 20px;
-    background: none;
-    border: none;
-    border-bottom: 0.5px solid #FFFFFF;
+  font-size: 14px;
+  max-width: 280px;
+  width: 100%;
+  height: 20px;
+  background: none;
+  border: none;
+  border-bottom: 0.5px solid #ffffff;
 
-    caret-color: #FFFFFF;
+  caret-color: #ffffff;
 }
 
 @media screen and (min-width: 768px) {
-    .header__form-input {
-        max-width: 336px;
-    }
+  .header__form-input {
+    max-width: 336px;
+  }
 
-    .header__form-search {
-        width: 336px;
-    }
+  .header__form-search {
+    width: 336px;
+  }
 
-    .header__form {
-        margin-top: 40px;
-    }
+  .header__form {
+    margin-top: 40px;
+  }
 
-    .header__error {
-        font-size: 14px;
-        line-height: 1.14;
-        margin-top: 20px;
-        text-align: center;
-    }
+  .header__error {
+    font-size: 14px;
+    line-height: 1.14;
+    margin-top: 20px;
+    text-align: center;
+  }
 }
 
 @media screen and (min-width: 1280px) {
-    .header__form-input {
-        max-width: 394px;
-    }
+  .header__form-input {
+    max-width: 394px;
+  }
 
-    .header__form-search {
-        width: 394px;
-    }
+  .header__form-search {
+    width: 394px;
+  }
 }
 
 .header__form-input:focus-within {
-    outline: none;
+  outline: none;
 }
 
 .header__form-input:not(:placeholder-shown) {
-    color: #FFFFFF;
+  color: #ffffff;
 }
 
 .header__form-input::placeholder {
-    color: #FFFFFF;
+  color: #ffffff;
 }
 
 .header__form-icon {
-    display: inline-flex;
-
+  display: inline-flex;
 }
 
 .header__error {
+  opacity: 0;
 
-    opacity: 0;
-
-    visibility: hidden;
+  visibility: hidden;
 }
 
 .header__error-visible {
-    margin-top: 16px;
-    color: #FF001B;
-    opacity: 100%;
-    visibility: visible;
+  margin-top: 16px;
+  color: #ff001b;
+  opacity: 100%;
+  visibility: visible;
 }
 
 .header__list-link--accent::after {
-    content: '';
-    position: absolute;
-    left: 50%;
-    bottom: -4px;
-    transform: translate(-50%, 0%);
-    background-color: #FF001B;
-    width: 100%;
-    height: 3px;
+  content: '';
+  position: absolute;
+  left: 50%;
+  bottom: -4px;
+  transform: translate(-50%, 0%);
+  background-color: #ff001b;
+  width: 100%;
+  height: 3px;
 }
 
 .header__logo-text {
-    display: none;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: none;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 @media screen and (min-width: 768px) {
-    .header__logo {
-        display: flex;
-        align-items: center;
-    }
+  .header__logo {
+    display: flex;
+    align-items: center;
+  }
 
-    .header__logo-text {
-        display: inline-block;
-        font-weight: 500;
-        font-size: 30px;
-        line-height: 1.17;
-        color: #FFFFFF;
-        margin-left: 10px;
-    }
+  .header__logo-text {
+    display: inline-block;
+    font-weight: 500;
+    font-size: 30px;
+    line-height: 1.17;
+    color: #ffffff;
+    margin-left: 10px;
+  }
 }
 
 .header__search {
-    position: absolute;
-    display: inline-flex;
-    background: none;
-    border: none;
+  position: absolute;
+  display: inline-flex;
+  background: none;
+  border: none;
 
-    stroke: #FFFFFF;
-    fill: none;
+  stroke: #ffffff;
+  fill: none;
 
-    top: 50%;
-    left: 102%;
-    transform: translate(-100%, -50%);
-    width: 24px;
-    height: 24px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  top: 50%;
+  left: 102%;
+  transform: translate(-100%, -50%);
+  width: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /*Ховери*/
 .header__logo:hover .header__icon {
-    stroke: #FF6B08;
+  stroke: #ff6b08;
 }
 
 .header__logo:hover .header__logo-text {
-    color: #FF6B08;
+  color: #ff6b08;
 }
 
 .header__list-link:hover {
-    color: #FF6B08;
+  color: #ff6b08;
 }
 .header__form-input:hover {
-    border-bottom-color: #FF6B08;
+  border-bottom-color: #ff6b08;
 }
 
 .header__form-input:hover.header__form-input::placeholder {
-    color: #FF6B08;
+  color: #ff6b08;
 }
 
-.header__form-input:hover~.header__search {
-    stroke: #FF6B08;
+.header__form-input:hover ~ .header__search {
+  stroke: #ff6b08;
 }
 
 .banner {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 20px;
-    font-size: 11px;
-    font-weight: 700;
-    text-align: center;
-    color: white;
-    background-image: linear-gradient(to bottom, blue 50%, yellow 50%);
-    opacity: 1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 20px;
+  font-size: 11px;
+  font-weight: 700;
+  text-align: center;
+  color: white;
+  background-image: linear-gradient(to bottom, blue 50%, yellow 50%);
+  opacity: 1;
 }
