--- a/src/sass/components/_modals.scss
+++ b/src/sass/components/_modals.scss
@@ -39,7 +39,7 @@
   // padding: 30px;
   // border-radius: 3px;
   // background-color: #fff;
-  // transition: 0.3s all;
+
   opacity: 0;
   visibility: hidden;
   max-width: 100%;
@@ -73,4 +73,9 @@
   position: fixed;
   opacity: 1;
   visibility: visible;
+}
+
+.overlay.active {
+  background-image: url(/src/images/friends.jpg);
+  background-size: contain;
 }
