--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -8,4 +8,6 @@
   --underline-color: #ff001b;
   --dark-bgc: #333333;
   --light-bgc: #ffffff;
+  --time: 200ms;
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
