--- a/src/sass/components/_modal-card.scss
+++ b/src/sass/components/_modal-card.scss
@@ -36,7 +36,6 @@
   transition: all 0.5s ease 0s;
 }
 
-
 .js-movie-modal {
   z-index: 150;
   overflow-y: scroll;
@@ -55,8 +54,8 @@
   transition: all 0.5s ease 0s;
 
   &::-webkit-scrollbar {
-      width: 0;
-    }
+    width: 0;
+  }
 
   @include tablet {
     width: 704px;
@@ -121,7 +120,7 @@
   color: #000000;
 
   transition: 0.25s cubic-bezier(0.4, 0, 0.2, 1),
-  background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+    background-color 0.25s cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
@@ -130,17 +129,16 @@
 }
 
 .js-movie-modal__poster {
+  position: relative;
   width: 240px;
   height: 357px;
   margin-bottom: 20px;
   border-radius: 5px;
 
-
   @include tablet {
     width: 264px;
     height: 374px;
     margin-right: 68px;
-
   }
 
   @include desktop {
